--- a/Documentación_plantillaLatex/tex/1_Introduccion.tex
+++ b/Documentación_plantillaLatex/tex/1_Introduccion.tex
@@ -1,3 +1,8 @@
 \capitulo{1}{Introducción}
 
-Descripción del contenido del trabajo y del estrucutra de la memoria y del resto de materiales entregados.
+Las tecnologías de realidad aumentada y virtual hoy en día están en gran auge, nos las podemos encontrar aplicadas tanto en la vida cotidiana en juegos y aplicaciones como en el comercial e industrial o incluso en la medicina y el entorno educativo.
+ 
+
+.....(Mejorar y completar)
+
+
