--- a/Documentación_plantillaLatex/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación_plantillaLatex/tex/2_Objetivos_del_proyecto.tex
@@ -1,5 +1,5 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
-
 El proyecto tiene por objeto proponer entornos de desarrollo de aplicaciones de Realidad Aumentada y Virtual basados en herramientas libres, de código abierto. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV u otros.
+
+Se espera de entre las herramientas propuestas...
