--- a/Documentación_plantillaLatex/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación_plantillaLatex/tex/4_Tecnicas_y_herramientas.tex
@@ -1,6 +1,19 @@
 \capitulo{4}{Técnicas y herramientas}
 
-Esta parte de la memoria tiene como objetivo presentar las técnicas metodológicas y las herramientas de desarrollo que se han utilizado para llevar a cabo el proyecto. Si se han estudiado diferentes alternativas de metodologías, herramientas, bibliotecas se puede hacer un resumen de los aspectos más destacados de cada alternativa, incluyendo comparativas entre las distintas opciones y una justificación de las elecciones realizadas. 
-No se pretende que este apartado se convierta en un capítulo de un libro dedicado a cada una de las alternativas, sino comentar los aspectos más destacados de cada opción, con un repaso somero a los fundamentos esenciales y referencias bibliográficas para que el lector pueda ampliar su conocimiento sobre el tema.
 
+\section{Técnicas de desarrollo}
 
+\section{Herramientas de documentación}
+\subsection{LaTex}
+Se trata de un sistema de composición de textos, con el objetivo de la creación de documentos de alta calidad tipográfica.
+\section{Herramientas de gestión}
+\subsection{GitHub}
+Se trata de una plataforma donde se pueden guardar con un sistema de control de versiones los proyectos....
+
+ Link del repositorio: \url{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada}
+
+\section{Herramientas de desarrollo}
+\subsection{Unity}
+Unity, es un motor gráfico de desarrollo de videojuegos creado por Unity technologies.
+
+\subsection{title}
