--- a/Documentación_plantillaLatex/memoria.tex
+++ b/Documentación_plantillaLatex/memoria.tex
@@ -360,8 +360,8 @@
 % Datos de portada
 \title{título del TFG}
 \author{\nombre}
-\tutor{Pedro Luis Sanchez Ortega}
-\cotutor{Alvar Arnaiz González}
+\tutor{Pedro Luis Sánchez Ortega}
+\cotutor{Álvar Arnaiz González}
 \date{\today}
 
 \begin{document}
