--- a/Documentación_plantillaLatex/tex/1_Introduccion.tex
+++ b/Documentación_plantillaLatex/tex/1_Introduccion.tex
@@ -1,6 +1,6 @@
 \capitulo{1}{Introducción}
 
-Las tecnologías de realidad aumentada y virtual hoy en día están en gran auge, nos las podemos encontrar aplicadas tanto en la vida cotidiana en juegos y aplicaciones como en el comercial e industrial o incluso en la medicina y el entorno educativo.
+Las tecnologías de realidad aumentada y virtual hoy en día están en gran auge. Se pueden encontrar aplicadas, tanto en la vida cotidiana en juegos y aplicaciones, como en el comercial e industrial o incluso en la medicina y el entorno educativo.
  
 
 .....(Mejorar y completar)
