--- a/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
+++ b/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
@@ -1,47 +1,49 @@
 \capitulo{3}{Conceptos teóricos}
 
 
-\section{Realidad aumentada}
-El concepto de realidad aumentada se aplica a las tecnologías que permiten añadir información gráfica sobrepuesta al mundo real en pantalla.
-La realidad virtual se diferencia que esta crea un entorno virtual completo en el que el usuario se inmerge, mientras que la aumentada sobrepone información virtual sobre el mundo real.
+\section{Realidad aumentada y virtual}
+El concepto de realidad aumentada (AR Augmented Reality) se aplica a las tecnologías que permiten añadir información gráfica sobrepuesta al mundo real en pantalla.
+La realidad virtual(RV) se diferencia de la anterior, en que esta crea un entorno virtual completo en el que el usuario se sumerge.
  
 origenes y evolucion...
 
 
+
+
 \section{Herramientas AR}
-He estado comparando diferentes herramientas de desarrollo para realidad aumentada. Algunas de ellas se tratan de herramientas ya desarrolladas y usadas con fines educativos o comerciales. Otras de las herramientas que veremos son los frameworks/api que muchas de las herramientas anteriores usan.
+Se han comparado diferentes herramientas de desarrollo para realidad aumentada. Algunas de ellas se tratan de herramientas ya desarrolladas y usadas con fines educativos o comerciales. Otras de las herramientas que se ven son los frameworks/api que muchas de las herramientas anteriores usan.
 nuevas online, poder la web.. 
 
-\subsection{CoSpaces}
+\subsection{CoSpaces}\footnote{\url{https://cospaces.io/edu/}}
 Es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
 
-Para crear los proyectos se pueden hacer desde la web donde tiene un entorno de desarrollo 3D donde puedes añadir paredes, objetos etc , para tu escenario. Pero esto a limitado a un número de objetos que se pueden añadir al proyecto. Para añadir más hay que tener la versión premium. También puedes codificar eventos, acciones. mediante programación de bloques, también se puede mediante scrips pero esta opción pertenece a la versión premium. Para añadir modelos 3D al proyecto se puede subir desde un archivo local o buscando google poly(biblioteca publica de google de modelos3D)
+Para crear los proyectos se puede hacer desde la web donde tiene un entorno de desarrollo 3D donde puedes añadir paredes, objetos etc, para tu escenario. Pero esto ha limitado a un número de objetos que se pueden añadir al proyecto. Para añadir más hay que tener la versión premium. También pueden codificar eventos, acciones mediante programación de bloques, también se puede mediante scrips pero esta opción pertenece a la versión premium. Para añadir modelos 3D al proyecto se puede subir desde un archivo local o buscando google poly(biblioteca publica de google de modelos3D)
 Tienen compatibilidad con el mergecube para diseñar proyectos para el cubo, aunque este plugin se encuentra disponible para la versión premium.
 
 ...
 
-\subsection{Metaverse}
-Es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3d o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, luego se puede añadir botones y menus, para que te lleven a otra pantalla que tenga otro objeto asignado. Así por ejemplo he visto ejemplo en los que hace pequeños juegos de preguntas y dependiendo de las respuestas te llevan a diferentes pantallas.
+\subsection{Metaverse}\footnote{\url{https://studio.gometa.io/discover/me}}
+Es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3D o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, posteriormente se pueden añadir botones y menus, para que te lleven a otra pantalla que tenga otro objeto asignado. Así, por ejemplo, se pueden hacer ejemplos en los que hace pequeños juegos de preguntas y dependiendo de las respuestas te llevan a diferentes pantallas.
 También da la posibilidad de importar tus propios modelos y imágenes.
 También incluye la posibilidad de reconocer expresiones faciales para poder usarlo como disparadores.
 También puede usar el Arcore y Arkit para permitir que los objetos puedan asentarse en una posición y poder girar alrededor suyo.
 
-\subsection{Zapworks}
-Esta aplicación esta se podría considerar que esta más enfocada a lo comercial. Ofrece una prueba gratuita de 30 días, luego hay diferentes modelos de suscripción.
-Por lo que he estado viendo ofrece más posibilidades que las anteriores herramientas. Pero también es mas compleja ya que usa su la aplicación para diseño y programación de ejemplos es mas completa y ofrece mas posibilidades.
-Para trabajar con los proyectos tiene su propia aplicación de escritorio, desde donde se puedes crear tus objetos, mecánicas que quieras incorporar, programar los scripts (javascript) a usar.
+\subsection{Zapworks}\footnote{\url{https://zap.works/}}
+Esta aplicación se podría considerar que está más enfocada a lo comercial. Ofrece una prueba gratuita de 30 días, luego hay diferentes modelos de suscripción.
+Ofrece más posibilidades que las anteriores herramientas. Pero también es mas compleja ya que usa su propia aplicación para diseño y programación de ejemplos////REVISARR////.
+Para trabajar con los proyectos tiene su propia aplicación de escritorio, desde donde se pueden crear tus objetos, mecánicas que quieras incorporar, programar los scripts (javascript) a usar.
 
-Algunos ejemplos que veo son de poder reconocer por ejemplo un folleto de publicidad que sería el disparador y que salte un modelo 3d para hacer un anuncio interactivo, o lo mismo reconociendo una imagen del sistema solar y que salte un modelo 3D del sistema solar. 
+Algunos ejemplos que muestra son por ejemplo el reconocimiento de un folleto de publicidad que actua de disparador y salta un modelo 3d del anuncio interactivo, o otro en el que reconociendo una imagen del sistema solar consigue que se ejecute un modelo 3D del sistema solar. 
 Otros en los que reconoce la cara(facetracking) y es capaz de poner objetos en AR, por ejemplo, sombreros, gafas, cascos…
-Tiene también posee Word tracking, que en resumen es la capacidad de reconocer el entorno para poder colocar objetos de una manera mas realista sobre el terreno, por ejemplo, que de la sensación de que realmente esta sobre la mesa aunque vayamos moviendo el ángulo de la cámara.
+Posee Word tracking, que en resumen es la capacidad de reconocer el entorno para poder colocar objetos de una manera mas realista sobre el terreno, por ejemplo, que de la sensación de que realmente esta sobre la mesa aunque vayamos moviendo el ángulo de la cámara.
 
-\subsection{kudan}
+\subsection{kudan}\footnote{\href{https://www.xlsoft.com/en/products/kudan/?utm_source=google&utm_medium=adwords&utm_campaign=cp01&gclid=Cj0KCQiAvJXxBRCeARIsAMSkAprma7nGzsXVWd9w5H4HSQzNoOkF2eJu8LzAtEXbaDALYPUdfBOOgpEaAoqoEALw_wcB}{kudan}}
 Es un tecnología para percepción artificial, la cual se puede utilizar para la AR/Vr , robótica y drones, y los coches.
 Usa la tecnología slam (Simultaneous Localization and Mapping) para el reconocimiento del escenario, esta tecnología también la usa ArCore por ejemplo.
 Tiene disponible SDK para desarrollar, en iOS, Android, y Unity.
 
 \subsection{Vuforia}
-Es un SDk para realizar aplicaciones de realidad aumentada. Se puede emplear Java, C++ y desarrollo con unity. Tiene diferentes licencias de pago, parece que también cuenta con una gratuita, pero con limitaciones.
+Es un SDK para realizar aplicaciones de realidad aumentada. Se puede emplear Java, C++ y desarrollar con unity. Tiene diferentes licencias de pago, parece que también cuenta con una gratuita, pero con limitaciones.
 Mapeamiento via OpenGL
 Smart TerrainTM, capacidad de reconstruir un terreno en tiempo real, creando un mapa en 3D.
 
@@ -49,13 +51,14 @@ Smart TerrainTM, capacidad de reconstruir un terreno en tiempo real, creando un 
 
 
 \subsection{ArUco}
-Librería de código abierto, en c++, y requiere OpenCV para el reconocimiento de marcadores.
+Librería de código abierto, en C++, y requiere OpenCV para el reconocimiento de marcadores.
 Por si mima no cuenta con la posibilidad de proyectar modelos tridimensionales, pero puede hacer uso de otras librerías para ello, como OpenGl.
 Principalmente trata la detección de marcadores, para situar los elementos de AR.
 
 \subsection{OpenCV}
 Es una librería de visión por computación y machin learning, de código abierto. Permite identificar objetos, caras, hacer tracking..
-En este caso no lo tengo muy claro la herramienta, pero he visto casos que únicamente utilizan OpenCv, pero también otros en que lo combinan con Arkit, ArUco u otros para mejorar los resultados.
+
+....., pero he visto casos que únicamente utilizan OpenCv, pero también otros en que lo combinan con Arkit, ArUco u otros para mejorar los resultados.
 
 \subsection{ArCore}
 \subsection{ArKit}
@@ -63,12 +66,22 @@ En este caso no lo tengo muy claro la herramienta, pero he visto casos que únic
 Entorno de desarrollo, que se caracteriza por que da la posibilidad de ejecutar el proyecto desde el navegador web dándole permiso para usar a la cámara del dispositivo, de forma que no haría falta instalarse ninguna aplicación.
 
 
+
 \section{Tecnicas AR}
 	\subsection{Detección de marcadores}
-	\subsubsection{Mergecube}
+	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizaran como referencia espacial para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
+	
+	Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
+	También es posible que el marcador se trate de un objeto físico, como por ejemplo una lampara, o un coche.
+	
+	Aunque gracias al avance de la calidad de las cámaras y en los software de reconocimiento, es posible utilizar marcadores mas complejos,esto también implicaran que sera mas posible que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
+	\colorbox{red}{MEJORAR y Completar si es posible}
+	
+	\subsubsection{Mergecube}\footnote{\url{https://mergeedu.com/}}
+	El mergecube se trata de un cubo diseñado por ......, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas. 
 	\subsection{Detección del entorno}
 	\subsubsection{SLAM}
-	Slam,Simultaneous Localization and Mapping, se trata de una tecnica de reconocimiento del escenario, puede reconocer donde hay una superficie plana, donde un pared
+	Slam,Simultaneous Localization and Mapping, se trata de una técnica de reconocimiento del escenario, puede reconocer donde hay una superficie plana, donde un pared
 	
 	
 	
