Algunas correciones y prueba del .gitignore

--- a/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
+++ b/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
@@ -14,74 +14,74 @@ origenes y evolucion...
 Se han comparado diferentes herramientas de desarrollo para realidad aumentada. Algunas de ellas se tratan de herramientas ya desarrolladas y usadas con fines educativos o comerciales. Otras de las herramientas que se ven son los frameworks/api que muchas de las herramientas anteriores usan.
 nuevas online, poder la web.. 
 
-\subsection{CoSpaces}\footnote{\url{https://cospaces.io/edu/}}
-Es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
+\subsection{ArCore}
+\subsection{ArKit}
+\subsection{CoSpaces} CoSpaces\footnote{\url{https://cospaces.io/edu/}} es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
 
-Para crear los proyectos se puede hacer desde la web donde tiene un entorno de desarrollo 3D donde puedes añadir paredes, objetos etc, para tu escenario. Pero esto ha limitado a un número de objetos que se pueden añadir al proyecto. Para añadir más hay que tener la versión premium. También pueden codificar eventos, acciones mediante programación de bloques, también se puede mediante scrips pero esta opción pertenece a la versión premium. Para añadir modelos 3D al proyecto se puede subir desde un archivo local o buscando google poly(biblioteca publica de google de modelos3D)
-Tienen compatibilidad con el mergecube para diseñar proyectos para el cubo, aunque este plugin se encuentra disponible para la versión premium.
+Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scrips, aun que hay que destacar, que la programación por scrips y algunas opciones de la programación de bloques unicamente están disponibles con una licencia premium. Para añadir un modelo3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly(biblioteca publica de google de modelos3D).
+CoSpace también cuenta con la opción de diseñar proyectos para el mergecube, aunque este plugin se encuentra disponible para la versión premium.
 
 ...
 
-\subsection{Metaverse}\footnote{\url{https://studio.gometa.io/discover/me}}
-Es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3D o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, posteriormente se pueden añadir botones y menus, para que te lleven a otra pantalla que tenga otro objeto asignado. Así, por ejemplo, se pueden hacer ejemplos en los que hace pequeños juegos de preguntas y dependiendo de las respuestas te llevan a diferentes pantallas.
-También da la posibilidad de importar tus propios modelos y imágenes.
+\subsection{Metaverse} Metaverse\footnote{\url{https://studio.gometa.io/discover/me}} es otra aplicación enfocada bastante al entorno educativo. En este caso el entorno de desarrollo de los ejemplos es más sencillo. En la propia web, tendremos una estructura similar un modelo de diagrama de flujo. En cada paso se puede añadir un objeto 3D o una imagen que es la que estará flotando cuando estemos usando la realidad aumentada, posteriormente se pueden añadir botones y menús, para que te lleven a otra pantalla que tenga otro objeto asignado. Así, por ejemplo, se pueden hacer ejemplos en los que hace pequeños juegos de preguntas y, dependiendo de las respuestas, te llevan a diferentes pantallas.
+También da la posibilidad de importar tus propios modelos e imágenes.
 También incluye la posibilidad de reconocer expresiones faciales para poder usarlo como disparadores.
 También puede usar el Arcore y Arkit para permitir que los objetos puedan asentarse en una posición y poder girar alrededor suyo.
 
-\subsection{Zapworks}\footnote{\url{https://zap.works/}}
+\subsection{Zapworks} ZapWorks\footnote{\url{https://zap.works/}}
 Esta aplicación se podría considerar que está más enfocada a lo comercial. Ofrece una prueba gratuita de 30 días, luego hay diferentes modelos de suscripción.
 Ofrece más posibilidades que las anteriores herramientas. Pero también es mas compleja ya que usa su propia aplicación para diseño y programación de ejemplos////REVISARR////.
-Para trabajar con los proyectos tiene su propia aplicación de escritorio, desde donde se pueden crear tus objetos, mecánicas que quieras incorporar, programar los scripts (javascript) a usar.
+Para trabajar con los proyectos tiene su propia aplicación de escritorio, desde donde se pueden crear objetos, mecánicas que quieras incorporar, programar los scripts (javascript) a usar.
 
-Algunos ejemplos que muestra son por ejemplo el reconocimiento de un folleto de publicidad que actua de disparador y salta un modelo 3d del anuncio interactivo, o otro en el que reconociendo una imagen del sistema solar consigue que se ejecute un modelo 3D del sistema solar. 
-Otros en los que reconoce la cara(facetracking) y es capaz de poner objetos en AR, por ejemplo, sombreros, gafas, cascos…
+Algunos ejemplos que muestra son por ejemplo el reconocimiento de un folleto de publicidad que actúa de disparador y salta un modelo 3D del anuncio interactivo. Otro ejemplo en el que reconociendo una imagen del Sistema Solar consigue que se ejecute un modelo 3D del Sistema Solar. 
+Otros en los que reconoce la cara (facetracking) y es capaz de poner objetos en AR, por ejemplo, sombreros, gafas, cascos…
 Posee Word tracking, que en resumen es la capacidad de reconocer el entorno para poder colocar objetos de una manera mas realista sobre el terreno, por ejemplo, que de la sensación de que realmente esta sobre la mesa aunque vayamos moviendo el ángulo de la cámara.
 
-\subsection{kudan}\footnote{\href{https://www.xlsoft.com/en/products/kudan/?utm_source=google&utm_medium=adwords&utm_campaign=cp01&gclid=Cj0KCQiAvJXxBRCeARIsAMSkAprma7nGzsXVWd9w5H4HSQzNoOkF2eJu8LzAtEXbaDALYPUdfBOOgpEaAoqoEALw_wcB}{kudan}}
-Es un tecnología para percepción artificial, la cual se puede utilizar para la AR/Vr , robótica y drones, y los coches.
-Usa la tecnología slam (Simultaneous Localization and Mapping) para el reconocimiento del escenario, esta tecnología también la usa ArCore por ejemplo.
+\subsection{Kudan} Kudan\footnote{\href{https://www.xlsoft.com/en/products/kudan/?utm_source=google&utm_medium=adwords&utm_campaign=cp01&gclid=Cj0KCQiAvJXxBRCeARIsAMSkAprma7nGzsXVWd9w5H4HSQzNoOkF2eJu8LzAtEXbaDALYPUdfBOOgpEaAoqoEALw_wcB}{kudan}} es un tecnología para percepción artificial, la cual se puede utilizar para la AR/VR , robótica y drones, y los coches.
+Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconocimiento del escenario, esta tecnología también la usa ArCore por ejemplo.
 Tiene disponible SDK para desarrollar, en iOS, Android, y Unity.
 
 \subsection{Vuforia}
-Es un SDK para realizar aplicaciones de realidad aumentada. Se puede emplear Java, C++ y desarrollar con unity. Tiene diferentes licencias de pago, parece que también cuenta con una gratuita, pero con limitaciones.
-Mapeamiento via OpenGL
-Smart TerrainTM, capacidad de reconstruir un terreno en tiempo real, creando un mapa en 3D.
+Es un SDK para realizar aplicaciones de realidad aumentada. Se puede emplear Java, C++ y desarrollar con Unity.
+Cuenta con una licencia gratuita por defecto con limitaciones,un máximo de 100 vumarks y 1000 cloud targets.
+Es posible ampliar a 3 tipos de tarifas, básica `por 42 mes, básica +cloud por 92, y la pro en la deben ponerse en contacto con ellos para su registro y uso.
+
 
 \subsection{Wikitude}
 
 
 \subsection{ArUco}
-Librería de código abierto, en C++, y requiere OpenCV para el reconocimiento de marcadores.
-Por si mima no cuenta con la posibilidad de proyectar modelos tridimensionales, pero puede hacer uso de otras librerías para ello, como OpenGl.
-Principalmente trata la detección de marcadores, para situar los elementos de AR.
+
 
 \subsection{OpenCV}
-Es una librería de visión por computación y machin learning, de código abierto. Permite identificar objetos, caras, hacer tracking..
+Es una librería de visión por computación y machine learning, de código abierto. Permite identificar objetos, caras, hacer tracking..
 
 ....., pero he visto casos que únicamente utilizan OpenCv, pero también otros en que lo combinan con Arkit, ArUco u otros para mejorar los resultados.
 
-\subsection{ArCore}
-\subsection{ArKit}
+
 \subsection{8thWall}
 Entorno de desarrollo, que se caracteriza por que da la posibilidad de ejecutar el proyecto desde el navegador web dándole permiso para usar a la cámara del dispositivo, de forma que no haría falta instalarse ninguna aplicación.
 
 
 
-\section{Tecnicas AR}
+
+\section{Técnicas AR}
 	\subsection{Detección de marcadores}
-	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizaran como referencia espacial para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
+	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
 	
 	Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
 	También es posible que el marcador se trate de un objeto físico, como por ejemplo una lampara, o un coche.
 	
-	Aunque gracias al avance de la calidad de las cámaras y en los software de reconocimiento, es posible utilizar marcadores mas complejos,esto también implicaran que sera mas posible que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
+	Aunque gracias al avance de la calidad de las cámaras y el los software de reconocimiento, es posible utilizar marcadores mas complejos,esto también implicarán que será mas probable que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
 	\colorbox{red}{MEJORAR y Completar si es posible}
 	
 	\subsubsection{Mergecube}\footnote{\url{https://mergeedu.com/}}
 	El mergecube se trata de un cubo diseñado por ......, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas. 
 	\subsection{Detección del entorno}
+	La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de sin la ayuda de un marcador, poder ubicar los modelos en el escenario.
+	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar que objetos están mas o menos cerca, cuales son planos, si se trata de un objeto que no tiene profundidad(una pared)...
 	\subsubsection{SLAM}
-	Slam,Simultaneous Localization and Mapping, se trata de una técnica de reconocimiento del escenario, puede reconocer donde hay una superficie plana, donde un pared
+	Slam,Simultaneous Localization and Mapping, se trata de una técnica de reconocimiento del entorno que la cámara visualiza, puede reconocer donde hay una superficie plana, donde un pared
 	
 	
 	
