instalación Unity y añadido algunas imágenes

--- a/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
+++ b/Documentación_plantillaLatex/tex/3_Conceptos_teoricos.tex
@@ -17,7 +17,7 @@ nuevas online, poder la web..
 \subsection{ArCore}
 \subsection{ArKit}
 \subsection{CoSpaces} CoSpaces\footnote{\url{https://cospaces.io/edu/}} es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
-
+\imagen{cospaces2}{Plataforma de de desarrollo de CoSpaces}
 Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scrips, aun que hay que destacar, que la programación por scrips y algunas opciones de la programación de bloques unicamente están disponibles con una licencia premium. Para añadir un modelo3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly(biblioteca publica de google de modelos3D).
 CoSpace también cuenta con la opción de diseñar proyectos para el mergecube, aunque este plugin se encuentra disponible para la versión premium.
 
@@ -68,15 +68,16 @@ Entorno de desarrollo, que se caracteriza por que da la posibilidad de ejecutar 
 \section{Técnicas AR}
 	\subsection{Detección de marcadores}
 	La detección de marcadores, se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial para situar elemento que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
-	
+	\imagen{ejemploMarcadorCasa}{Ejemplo un marcador sencillo}
 	Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
 	También es posible que el marcador se trate de un objeto físico, como por ejemplo una lampara, o un coche.
-	
+	\imagen{ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador}
 	Aunque gracias al avance de la calidad de las cámaras y el los software de reconocimiento, es posible utilizar marcadores mas complejos,esto también implicarán que será mas probable que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos.
 	\colorbox{red}{MEJORAR y Completar si es posible}
 	
-	\subsubsection{Mergecube}\footnote{\url{https://mergeedu.com/}}
-	El mergecube se trata de un cubo diseñado por ......, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas. 
+	\subsubsection{Mergecube}
+	El mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por ......, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
+	\imagen{mergecube}{Mergecube} 
 	\subsection{Detección del entorno}
 	La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de sin la ayuda de un marcador, poder ubicar los modelos en el escenario.
 	Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar que objetos están mas o menos cerca, cuales son planos, si se trata de un objeto que no tiene profundidad(una pared)...
