--- a/Documentación_plantillaLatex/bibliografia.bib
+++ b/Documentación_plantillaLatex/bibliografia.bib
@@ -26,3 +26,9 @@
   publisher={Elsevier}
 }
 
+@mastersthesis{simonetti2013vuforia,
+  title={Vuforia v1. 5 SDK: Analysis and evaluation of capabilities},
+  author={Simonetti Iba{\~n}ez, Alexandro and Paredes Figueras, Josep},
+  year={2013},
+  school={Universitat Polit{\`e}cnica de Catalunya}
+}
