--- a/Documentación_plantillaLatex/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación_plantillaLatex/tex/4_Tecnicas_y_herramientas.tex
@@ -24,9 +24,10 @@ Unity Hub se trata de un launcher desde el que se pueden, descargar varias versi
 
 En la pestaña de installs, pulsando el botón "Add", saldrá una venta donde poder escoger la versión deseada, al pasar el siguiente paso deberemos escoger los módulos complementarios para Unity, por el momento sería necesario el de Android, para poder pasar nuestros proyectos a una aplicación Android, importante desplegar las opciones del modulo y seleccionar ambas, pues para la compilación de una aplicación es estrictamente necesario el APK de Android.
 
-\includegraphics[scale=0.4]{Unity01}
-\includegraphics[scale=0.4]{unity02}
-
+%\includegraphics[scale=0.4]{Unity01}
+%\includegraphics[scale=0.4]{unity02}
+\imagen{unity01}{Paso 1: Seleccionar la versión de Unity}
+\imagen{unity02}{Paso 2: Seleccionar }
 Una vez terminada la instalación ya es posible comenzar a crear proyectos. 
 Para poder descargar y usar Assets desde la tienda de Unity es necesario tener una cuenta de usuario.
-\subsection{title}
+
